# python3-stdlib-demos

./: .flake8  .isort.cfg  Makefile  README.md  pyproject.toml  setup.cfg
design_paradigms/dependency_injection/: example.ipynb
modules/dataclasses/: dataclasses.ipynb
modules/functools/: partial.ipynb
modules/logging/: log_formatters.ipynb  log_handlers.ipynb
modules/os/: environment_variables.ipynb  permissions.ipynb
