[metadata]
name = python3_stdlib_demos
cersion = 0.0.1
description = "Demonstrations of the Python 3 standard library"
author = ["Kyle Simpson <kyle3381@gmail.com>"]
repository = "https://github.com/Kyle-Simpson/python3-stdlib-demos"

[options]
install_requires = 
    importlib_metadata>=6.1.0,<6.2.0; python_version<'3.11'
    jupyter>=1.0.0,<1.1.0

[options.extras_require]
dev =
    black>=23.1.0,<23.2.0
    flake8>=6.0.0,<6.1.0
    flake8_annotations>=3.0.0,<3.1.0
    flake8_bandit>=4.1.0,<4.2.0
    flake8_black>=0.3.6,<0.4.0
    flake8_docstrings>=1.7.0,<1.8.0
    flake8_isort>=6.0.0,<6.1.0
    isort>=5.12.0,<5.13.0
    pytype>=2022.12.15,<2023.0
